--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,19 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.row *{
+    outline: 1px solid red;
+}
+
+/* *HEADER*  */
+
+header{
+    height: 80px;
+    background-color: rgb(44,62,79);
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+
