--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,13 @@
     outline: 1px solid red;
 }
 
+section:nth-of-type(3n+1){
+    background-color: rgb(25,188,156);
+}
+
+section{
+    padding: 3rem;
+}
 /* *HEADER*  */
 
 header{
