--- a/css/style.css
+++ b/css/style.css
@@ -27,16 +27,30 @@ section{
 }
 
 h1{
-    font-size: 2.75rem;
+    font-size: 2.5rem;
+}
+
+h3{
+    font-size: 2rem;
 }
 
 .fa-star{
     font-size: 2rem;
 }
 
-.font-125{
-    font-size: 1.25rem;
+.bg-white{
+    background-color: white;
 }
+
+.bg-black{
+    background-color: black;
+}
+
+img{
+    width: 100%;
+    border-radius: .75rem;
+}
+
 /* *HEADER*  */
 
 header{
@@ -59,9 +73,7 @@ header ul{
 .star-container div.line{
     height: 5px;
     border-radius: 1rem;
-    background-color: white;
 }
-
 
 /* * TERZA SECTION *  */
 
