--- a/Bonus/css/style.css
+++ b/Bonus/css/style.css
@@ -93,24 +93,35 @@ header .right .middle{
 }
 
 /* QUARTA SECTION  */
-
-#form li:not(:first-child){
-    border-top: 1px solid lightgrey;
+form *:not(:last-child){
+    display: block;
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid lightgray;
 }
 
-#form li{
-    line-height: 2.5rem;
+input:focus,
+textarea:focus {
+    border: 1px solid rgb(25,188,156);
+    outline: none; 
+}
+
+form *::placeholder{
+    color: black;
+}
+
+form input{
+    line-height: 3rem;
+}
+
+textarea{
+    padding-top: .75rem;
 }
 
 #contact button{
     background-color:rgb(25,188,156);
     margin-top: .5rem;
 }
-
-#contact ul li:last-child{
-    margin-top: 6rem;
-}
-
 
 /* FOOTER  */
 footer section:first-child{
