--- a/Bonus/css/style.css
+++ b/Bonus/css/style.css
@@ -118,6 +118,15 @@ textarea{
     padding-top: .75rem;
 }
 
+input[type=submit]{
+    background-color:rgb(25,188,156);
+    margin-top: .5rem;
+    line-height: 1.5;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    border-radius: 0.25rem;
+}
+
 #contact button{
     background-color:rgb(25,188,156);
     margin-top: .5rem;
